<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlienQuest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_human">Hello human. Welcome to</string>
    <string name="alienquest">AlienQuest</string>
    <string name="pref_title_file">pref_general</string>
    <string name="pref_title_name">Display Name</string>
    <string name="pref_title_difficulty">Quest Difficulty</string>
    <string name="pref_title_game_length">Campaign Length</string>
    <string name="pref_title_sound">Sound</string>
    <string name="pref_title_top_five_scores">Highscores</string>
    <string name="pref_title_top_five_names">Username</string>
    <string name="saved_high_score_default">High Score Default</string>
    <string name="saved_high_score">High Score</string>

    <!-- Completion Activity Bundle Keys -->
    <string name="key_score">score</string>
    <string name="key_completed">completed</string>
    <string name="key_display_completed">display completed</string>

    <!-- Error Messages -->
    <string name="error_general">An Error Has Occurred</string>

    <!-- Difficulty Strings -->
    <string name="easyDifficulty">Harmless Explorers (Easy)</string>
    <string name="mediumDifficulty">Ancient Astronauts (Medium)</string>
    <string name="hardDifficulty">Hostile Takeover (Hard)</string>
    <string name="extremeDifficulty">Giorgio Tsoukalos\' Vacation (Extreme)</string>

    <!-- Game Length -->
    <string name="speedRound">5 Minutes (Speed Round)</string>
    <string name="shortLength">10 Minutes (Short)</string>
    <string name="mediumLength">15 Minutes (Medium)</string>
    <string name="longLength">30 Minutes (Stamina Defense)</string>

    <!-- Instruction strings -->
    <string name="instructions_category1">OBJECTIVE: Blast the aliens as fast as you can before they land on Earth and disrupt life as we know it!</string>
    <string name="instructions_category1_1">[1.] Before starting a quest, make sure that the GPS on your device is enabled.</string>
    <string name="instructions_category1_2">[2.] Go to preferences (gear icon), add your name, and set the level of quest difficulty and time.</string>
    <string name="instructions_category2">[3.] Go back to the main menu and start the game!</string>
    <string name="instructions_category2_1">[4.] You are taken to a camera screen. Move it around to find the aliens, or tap the settings menu to switch view and view a map with the aliens\' locations! Switch view again to revert back to camera.</string>
    <string name="instructions_category2_2">[5.] Destroy the enemies! Tap on the aliens on the screen to blast them down before your time is up. The closer you are to them the easier they get hit!</string>

    <!-- About strings -->
    <string name="about_mission">The goal of this application is to prepare people 
        for extraterrestrial landings by improving fitness in a fun and excited game. </string>
    <string name="about_authors">AlienQuest was created by: </string>
    <string name="about_author1">James Dagres</string>
    <string name="about_author2">Garrett Moran</string>
    <string name="about_author3">Tiffany Tuan</string>
    <string name="about_contact">Humans can contact us at jdagres@vt.edu</string>
    <!--
        Old string <string name="about_qoute">“I\'m sure the universe is full of intelligent life. 
        It\'s just been too intelligent to come here.” 
		― Arthur C. Clarke</string>
    -->

    <string name="about_qoute">“The only way to disprove acient aliens is when the extraterrestrials show up and say “we were never here”!” 
		― Giorgio Tsoukalos</string>
    <!-- Completion strings -->
    <string name="congratulations_name">Congratulations %1$s!</string>
    <string name="congratulations_message">You have managed to complete %2$d objectives and defeated %2$d aliens. Good job!</string>

    <!-- Value String -->
    <string name="pref_default_name"></string>
    <string name="pref_default_game_time"></string>

    <string-array name="settings_array">
        <item>Name</item>
        <item>Game Length</item>
        <item>Quest Difficulty</item>
    </string-array>

</resources>