<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_name" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_game_time"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_game_length" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_title_difficulty"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_difficulty" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_title_top_five_scores"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_top_five_scores" />
     <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_title_sound"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_sound" />

</PreferenceScreen>