<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88000000"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/instructionsCatagoryTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/instructions_category1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/catagory1Instruction1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:text="@string/instructions_category1_1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/catagory1Instruction2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:text="@string/instructions_category1_2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/instructionsCatagoryTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="32dp"
            android:text="@string/instructions_category2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/catagory2Instruction1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:text="@string/instructions_category2_1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/catagory2Instruction2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:text="@string/instructions_category2_2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:typeface="monospace" />
    </LinearLayout>

</ScrollView>